feat(engine): async chunk-send anti-stall watchdog + engine-core review fixes
Async chunk send (minecraft layer):
- Anti-stall watchdog: single-owner CAS election (worker vs watchdog) guarantees
  every reserved per-player FIFO slot is released within watchdogMs even if a
  serializer thread dies; main-thread recovery via settleOnMain.
- Pool lifecycle: configureAsync is now no-op when unchanged and closes the old
  pool OFF the main thread (kills the /victus reload tick stall, review #1/#3);
  shutdown drains queued tasks instead of dropping their shells.
- Encoder null-guard: write() throws a clean EncoderException instead of NPE-ing
  the netty loop on an (essentially unreachable) double serialize failure.

Engine-core review fixes (docs/phase-3/04):
- #2 keep last-good config on load failure (VictusEngine + VictusPlugin) instead
  of discarding the whole file on one bad key.
- #3/#6 one canonical DefaultConfig template (victus-core), shared by engine and
  plugin; async-pathfinding left commented (off); unified victus.yml path.
- #9 DAB start-distance now takes effect (throttle by distance beyond the
  full-tick radius); #10 proximity short-circuit on sudden approach.
- #4 GC advisory single source of truth via recommendedGcFlags(heap, dedicated);
  #5 clamp recommendedInitialHeapMb<=xmx; #7 clamp dab-activation-dist-mod<=16+warn;
  #8 warn on unknown nested dab: sub-keys.

Built (mojmap paperclip), Paper test suite + victus-core self-tests green;
deployed + soaked on e5aa1c05 (329 chunks, clean join/leave, no crash / stall /
watchdog false-fire / exceptions).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>